--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#DB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/admissions_committee?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=251715
+
 
